methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:17: error: expected class or object definition
def makeV(c:Color) {
^MethodsPicture:38: error: Unmatched closing brace '}' ignored here
}
^